Crash: sculpting with Dyntopo + clay brush #79007

Closed
opened 2020-07-17 02:28:55 +02:00 by CHET · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.35

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-16 18:07, hash: 608d9b5aa1

Short description of error
Dyntopo crash blender

Exact steps for others to reproduce the error

  1. open new scene
  2. go to sculpt layout
  3. turn on Dyntopo
  4. take Clay brush or other except Draw brush
  5. sculpting
    767eRt9h9j.mp4
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.35 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-16 18:07, hash: `608d9b5aa1` **Short description of error** Dyntopo crash blender **Exact steps for others to reproduce the error** 1) open new scene 2) go to sculpt layout 3) turn on Dyntopo 4) take Clay brush or other except Draw brush 5) sculpting [767eRt9h9j.mp4](https://archive.blender.org/developer/F8700337/767eRt9h9j.mp4)

Added subscriber: @cheteron

Added subscriber: @cheteron

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Exception thrown: read access violation. v was 0x40.

>	blender.exe!bmesh_disk_facevert_count(const BMVert * v) Line 282	C

 	blender.exe!bmiter__loop_of_vert_begin(BMIter__loop_of_vert * iter) Line 515	C
 	[Inline Frame] blender.exe!BM_iter_init(BMIter *) Line 152	C
 	[Inline Frame] blender.exe!BM_iter_new(BMIter *) Line 168	C
 	blender.exe!sculpt_vertex_neighbors_get_bmesh(SculptSession * ss, int index, SculptVertexNeighborIter * iter) Line 690	C
 	blender.exe!SCULPT_vertex_neighbors_get(SculptSession * ss, const int index, const bool include_duplicates, SculptVertexNeighborIter * iter) Line 784	C
 	blender.exe!SCULPT_neighbor_coords_average(SculptSession * ss, float * result, int index) Line 146	C
 	blender.exe!do_smooth_brush_task_cb_ex(void * userdata, const int n, const TaskParallelTLS * tls) Line 241	C
 	blender.exe!BLI_task_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 139	C++
 	blender.exe!SCULPT_smooth(Sculpt * sd, Object * ob, PBVHNode * * nodes, const int totnode, float bstrength, const bool smooth_mask) Line 292	C
 	blender.exe!do_brush_action(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups) Line 5673	C
 	blender.exe!do_tiled(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action) Line 5994	C
 	blender.exe!do_symmetrical_brush_actions(Sculpt * sd, Object * ob, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action, UnifiedPaintSettings * ups) Line 6077	C
 	blender.exe!sculpt_stroke_update_step(bContext * C, PaintStroke * UNUSED_stroke, PointerRNA * itemptr) Line 7347	C
 	blender.exe!paint_brush_stroke_add_step(bContext * C, wmOperator * op, const float * mouse_in, float pressure) Line 622	C
 	blender.exe!paint_stroke_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 1492	C
 	blender.exe!sculpt_brush_stroke_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 7482	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1287	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2116	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2426	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2727	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3360	C
 	blender.exe!WM_main(bContext * C) Line 478	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 534	C

`Exception thrown: read access violation. v was 0x40.` ``` > blender.exe!bmesh_disk_facevert_count(const BMVert * v) Line 282 C blender.exe!bmiter__loop_of_vert_begin(BMIter__loop_of_vert * iter) Line 515 C [Inline Frame] blender.exe!BM_iter_init(BMIter *) Line 152 C [Inline Frame] blender.exe!BM_iter_new(BMIter *) Line 168 C blender.exe!sculpt_vertex_neighbors_get_bmesh(SculptSession * ss, int index, SculptVertexNeighborIter * iter) Line 690 C blender.exe!SCULPT_vertex_neighbors_get(SculptSession * ss, const int index, const bool include_duplicates, SculptVertexNeighborIter * iter) Line 784 C blender.exe!SCULPT_neighbor_coords_average(SculptSession * ss, float * result, int index) Line 146 C blender.exe!do_smooth_brush_task_cb_ex(void * userdata, const int n, const TaskParallelTLS * tls) Line 241 C blender.exe!BLI_task_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 139 C++ blender.exe!SCULPT_smooth(Sculpt * sd, Object * ob, PBVHNode * * nodes, const int totnode, float bstrength, const bool smooth_mask) Line 292 C blender.exe!do_brush_action(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups) Line 5673 C blender.exe!do_tiled(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action) Line 5994 C blender.exe!do_symmetrical_brush_actions(Sculpt * sd, Object * ob, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action, UnifiedPaintSettings * ups) Line 6077 C blender.exe!sculpt_stroke_update_step(bContext * C, PaintStroke * UNUSED_stroke, PointerRNA * itemptr) Line 7347 C blender.exe!paint_brush_stroke_add_step(bContext * C, wmOperator * op, const float * mouse_in, float pressure) Line 622 C blender.exe!paint_stroke_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 1492 C blender.exe!sculpt_brush_stroke_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 7482 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1287 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2116 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2426 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2727 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857 C blender.exe!wm_event_do_handlers(bContext * C) Line 3360 C blender.exe!WM_main(bContext * C) Line 478 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 534 C ```
Ankit Meel changed title from Dyntopo bug to Crash: sculpting with Dyntopo + clay brush 2020-07-17 08:23:16 +02:00

This issue was referenced by f47f9a04b1

This issue was referenced by f47f9a04b1bf8b6497981b302c22c7ae6333fdd2

This issue was referenced by 7aabd74222

This issue was referenced by 7aabd74222371097353b55cad8c782c6a2a13207

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-07-21 22:27:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79007
There is no content yet.