source/blender/editors/sculpt_paint/sculpt_smooth.c
@@ -273,6 +273,7 @@ void SCULPT_smooth(Sculpt *sd,
     return;
   }
 
+  SCULPT_vertex_random_access_init(ss);
   SCULPT_boundary_info_ensure(ob);
 
   for (iteration = 0; iteration <= count; iteration++) {
